CHANGES IN VERSION 1.3.13
------------------------
 o add facet and free_y parameter for plotAvgProf and plotAvgProf2 <2015-03-29, Sun>
 o update docs <2015-03-29, Sun>
 o update plotAvgProf and plotAvgProf2 to fully supporting confidence interval,
   see https://github.com/GuangchuangYu/ChIPseeker/pull/6 <2015-03-29, Sun>
 
CHANGES IN VERSION 1.3.12
------------------------
 o add confidence interval for plotAvgProf, see https://github.com/GuangchuangYu/ChIPseeker/issues/3 <2015-03-26, Thu>
 
CHANGES IN VERSION 1.3.11
------------------------
 o add citation <2015-03-16, Mon>
 
CHANGES IN VERSION 1.3.10
------------------------
 o update GEO data <2015-03-03, Tue>
 
CHANGES IN VERSION 1.3.9
------------------------
 o add parameter *genomicAnnotationPriority* for annotatePeak function <2015-02-27, Fri>

CHANGES IN VERSION 1.3.8
------------------------
 o add DOSE citation <2015-02-13, Fri>
 
CHANGES IN VERSION 1.3.7
------------------------
 o bug fixed in plotDistToTSS <2015-02-06, Fri>
 
CHANGES IN VERSION 1.3.6
------------------------
 o when peak is exactly located at gene end and near the end of chromosome,
   NA will be generated and throw error when assigning downstream of gene end. 
   This bug has been fixed <2015-02-03, Tue>
 
CHANGES IN VERSION 1.3.5
------------------------
 o bug fixed in getNearestFeatureIndicesAndDistances when peak in the
   very begining or end of the chromosome <2015-01-30, Fri>
 
CHANGES IN VERSION 1.3.4
------------------------
 o bug fixed for introducing dplyr in plotDistToTSS <2015-01-28, Wed>

CHANGES IN VERSION 1.3.3
------------------------
 o update vignette to use BiocStyle::latex() <2015-01-26, Mon>
 
CHANGES IN VERSION 1.3.2
------------------------
 o fixed import issue to meet the changes of AnnotationDbi and S4Vectors <2015-01-22, Thu>

CHANGES IN VERSION 1.1.21
------------------------
 o use data.table instead of data.frame to optimize covplot <2014-10-06, Mon>

CHANGES IN VERSION 1.1.20